# PcaPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  PluginInfo.json  README.md  conanfile.py
.github/workflows/: build.yml
src/: DimensionSelectionAction.cpp  DimensionSelectionAction.h  PCA.h  PcaPlugin.cpp  PcaPlugin.h  PcaPlugin.json  SettingsAction.cpp  SettingsAction.h  Utils.h
test/: CMakeLists.txt  README.md  create_reference_data.py  requirements.txt  test.cpp  test_utils.h
